...
                    )
                ]
            ),
            .init(
                rows: [
                    .destructiveButton(
                        title: "Sign Out",
                        tapHandler: { self.authStore.signOut() }
                    )
                ]
            )
        ]
    }
...
